--- a/index.html
+++ b/index.html
@@ -747,6 +747,25 @@
   </style>
 </head>
 <body>
+
+<!-- IP Protection Banner -->
+<div class="ip-protect" style="
+  background: linear-gradient(135deg, rgba(193,18,31,0.85), rgba(11,11,11,0.95));
+  border:1px solid rgba(212,175,55,0.7);
+  border-radius:12px;
+  padding:10px 14px;
+  margin:12px auto;
+  max-width:1200px;
+  color:#f7f3e9;
+  font-size:0.9rem;
+">
+  <strong>Notice:</strong> This site describes concepts, positioning, and outcomes only.
+  <span style="color:#ffd26f;">
+    Implementation details, architectures, templates, and operating playbooks are provided after engagement or deposit.
+  </span>
+</div>
+
+
   <div class="page">
     <header>
       <div class="header-top">
