--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
       <a class="pill" href="tools/canvas/index.html">Free Canvas Tool</a>
 </nav>
     </div>
-  </header>
+  
+<div class="cta-row" style="display:flex;flex-wrap:wrap;gap:12px;margin:14px 0 0 0;">
+  <a class="btn btn-primary" href="downloads/Agent_Ops_Ownership_Risk_Canvas_FREE.pdf" download>Download Free Canvas (PDF)</a>
+  <a class="btn btn-secondary" href="downloads/Agent_Ops_Ownership_Risk_Canvas.xlsx" download>Download Canvas (XLSX)</a>
+  <a class="btn btn-ghost" href="tools/canvas/">Open Interactive Canvas</a>
+</div>
+</header>
 
   <main id="main">
     <section class="hero">
