--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MBCC Agent Ops Playbook — systems, patterns, and operating principles for building practical AI agent workflows." />
-  <title>MBCC Agent Ops Playbook</title>
+  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
+  <title>FinternetOps • MBCC Agent Ops Playbook</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
@@ -12,12 +12,12 @@
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>MBCC Agent Ops Playbook</b><div class="small">Operational patterns for AI agents</div></div></a>
+      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="#overview" data-scroll>Overview</a>
-        <a href="#runbooks" data-scroll>Runbooks</a>
-        <a href="#training" data-scroll>Training</a>
-        <a href="#blog" data-scroll>Blog</a>
+        <a href="/#overview">Overview</a>
+        <a href="/#runbooks">Runbooks</a>
+        <a href="/training/index.html">Training</a>
+        <a href="/blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
@@ -26,19 +26,19 @@
     
 <section class="hero" id="overview">
   <div class="card hero-card">
-    <div class="kicker">Rebuilt clean • AdSense-ready</div>
-    <h1 class="h1">Agent Ops: a practical operating system for building, running, and improving AI agents.</h1>
+    <div class="kicker">FinternetOps • governance-first • AdSense-ready</div>
+    <h1 class="h1">Agent Ops Control Plane patterns—observe, constrain, and intervene while agents act.</h1>
     <p class="sub">
-      This is the public-facing MBCC Agent Ops Playbook. Content-first pages help Google place Auto Ads cleanly while keeping
-      your project professional and readable.
+      A public-facing playbook built for clarity + SEO. Keep proprietary IP private, while still publishing
+      useful operating principles for your audience.
     </p>
     <div class="actions">
-      <a class="btn primary" href="#runbooks" data-scroll>See Runbooks</a>
-      <a class="btn" href="#training" data-scroll>Start Training</a>
-      <a class="btn" href="#blog" data-scroll>Read Blog</a>
+      <a class="btn primary" href="#runbooks">See Runbooks</a>
+      <a class="btn" href="/training/index.html">Start Training</a>
+      <a class="btn" href="/blog/index.html">Read Blog</a>
     </div>
     <div class="pills">
-      <span class="pill">Zero-trust mindset</span>
+      <span class="pill">Zero Trust defaults</span>
       <span class="pill">RBAC-ready</span>
       <span class="pill">Audit logs</span>
       <span class="pill">Human-in-loop</span>
@@ -47,7 +47,7 @@
 
   <aside class="card side" aria-label="Quick start">
     <h3>Quick start</h3>
-    <p>Define one use case, pick one agent role, run a runbook, then iterate.</p>
+    <p>Pick one agent role, run one checklist, then iterate weekly.</p>
     <hr class="sep"/>
     <div class="badge">1) Goal</div><div style="height:8px"></div>
     <div class="badge">2) Tools</div><div style="height:8px"></div>
@@ -59,38 +59,38 @@
 
 <section class="section" id="runbooks">
   <h2>Runbooks</h2>
-  <p>Public, simplified runbooks that are useful without exposing proprietary IP.</p>
+  <p>Public runbooks that stay useful without exposing proprietary IP.</p>
   <div class="grid">
     <div class="card tile">
       <h4><a href="/runbooks/onboarding.html">Onboarding Runbook</a></h4>
-      <p>How to start using Agent Ops in 30 minutes.</p>
+      <p>Start using Agent Ops in ~30 minutes.</p>
     </div>
     <div class="card tile">
       <h4><a href="/runbooks/quality.html">Quality & Eval Runbook</a></h4>
-      <p>Prompts, test cases, regression checks, and monitoring.</p>
+      <p>Test cases, regressions, monitoring.</p>
     </div>
     <div class="card tile">
       <h4><a href="/runbooks/security.html">Security Runbook</a></h4>
-      <p>Zero trust basics, secrets hygiene, RBAC, and incident response.</p>
+      <p>Zero trust, secrets hygiene, RBAC, incident response.</p>
     </div>
   </div>
 </section>
 
-<section class="section" id="training">
+<section class="section">
   <h2>Training</h2>
-  <p>Content-heavy learning pages (best inventory for Auto Ads).</p>
+  <p>Learning modules designed to create content depth (good for Auto Ads + SEO).</p>
   <div class="card callout">
     <h3><a href="/training/index.html">Open Training</a></h3>
     <p class="small">Fundamentals → Guardrails → Quality loop.</p>
   </div>
 </section>
 
-<section class="section" id="blog">
+<section class="section">
   <h2>Blog</h2>
-  <p>Weekly build notes and practical guides (excellent for SEO + monetization).</p>
+  <p>Short build notes you can expand over time.</p>
   <div class="card callout">
     <h3><a href="/blog/index.html">Open Blog</a></h3>
-    <p class="small">Short posts you can expand over time.</p>
+    <p class="small">Weekly posts = more pages = more inventory.</p>
   </div>
 </section>
 
