--- a/runbooks/quality.html
+++ b/runbooks/quality.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MBCC Agent Ops Playbook — systems, patterns, and operating principles for building practical AI agent workflows." />
+  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
   <title>Quality & Eval Runbook</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
@@ -12,19 +12,19 @@
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>MBCC Agent Ops Playbook</b><div class="small">Operational patterns for AI agents</div></div></a>
+      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="#overview" data-scroll>Overview</a>
-        <a href="#runbooks" data-scroll>Runbooks</a>
-        <a href="#training" data-scroll>Training</a>
-        <a href="#blog" data-scroll>Blog</a>
+        <a href="/#overview">Overview</a>
+        <a href="/#runbooks">Runbooks</a>
+        <a href="/training/index.html">Training</a>
+        <a href="/blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
     
-<section class="section" id="overview">
+<section class="section">
   <div class="card hero-card">
     <div class="kicker">Runbook</div>
     <h1 class="h1">Quality & Eval Runbook</h1>
@@ -35,7 +35,7 @@
   <div class="card callout">
     <h2>Checklist</h2>
     <ul>
-      <li>Create a ‘gold’ set of 20 real prompts.</li><li>Define pass/fail criteria (format + correctness + latency).</li><li>Track top failure reasons weekly and patch them.</li><li>Add regression tests and re-run after every change.</li>
+      <li>Create a ‘gold’ set of 20 real prompts.</li><li>Define pass/fail: format, correctness, latency.</li><li>Track top failure reasons weekly and patch them.</li><li>Add regression tests and re-run after every change.</li>
     </ul>
   </div>
 </section>
