--- a/training/index.html
+++ b/training/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MBCC Agent Ops Playbook — systems, patterns, and operating principles for building practical AI agent workflows." />
-  <title>Agent Ops Training</title>
+  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
+  <title>FinternetOps • Agent Ops Training</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
@@ -12,23 +12,23 @@
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>MBCC Agent Ops Playbook</b><div class="small">Operational patterns for AI agents</div></div></a>
+      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="#overview" data-scroll>Overview</a>
-        <a href="#runbooks" data-scroll>Runbooks</a>
-        <a href="#training" data-scroll>Training</a>
-        <a href="#blog" data-scroll>Blog</a>
+        <a href="/#overview">Overview</a>
+        <a href="/#runbooks">Runbooks</a>
+        <a href="/training/index.html">Training</a>
+        <a href="/blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
     
-<section class="section" id="overview">
+<section class="section">
   <div class="card hero-card">
     <div class="kicker">Training</div>
     <h1 class="h1">Agent Ops Training Hub</h1>
-    <p class="sub">Start here, then build a simple agent system the right way.</p>
+    <p class="sub">Fundamentals → Guardrails → Quality loop.</p>
     <div class="actions">
       <a class="btn primary" href="/training/module-1.html">Module 1</a>
       <a class="btn" href="/training/module-2.html">Module 2</a>
