--- a/training/module-3.html
+++ b/training/module-3.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MBCC Agent Ops Playbook — systems, patterns, and operating principles for building practical AI agent workflows." />
-  <title>Module 3 — Quality Loop</title>
+  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
+  <title>FinternetOps • Module 3 — Quality Loop</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
@@ -12,19 +12,19 @@
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>MBCC Agent Ops Playbook</b><div class="small">Operational patterns for AI agents</div></div></a>
+      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="#overview" data-scroll>Overview</a>
-        <a href="#runbooks" data-scroll>Runbooks</a>
-        <a href="#training" data-scroll>Training</a>
-        <a href="#blog" data-scroll>Blog</a>
+        <a href="/#overview">Overview</a>
+        <a href="/#runbooks">Runbooks</a>
+        <a href="/training/index.html">Training</a>
+        <a href="/blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
 
   <main class="container">
     
-<section class="section" id="overview">
+<section class="section">
   <div class="card hero-card">
     <div class="kicker">Training</div>
     <h1 class="h1">Module 3 — Quality Loop</h1>
@@ -34,7 +34,7 @@
 <section class="section">
   <div class="card callout">
     <h2>Key steps</h2>
-    <ul><li>Create a small eval set.</li><li>Track pass/fail.</li><li>Fix one failure class at a time.</li><li>Re-test weekly.</li></ul>
+    <ul><li>Small eval set (20 prompts).</li><li>Weekly regression checks.</li><li>Fix top failure class first.</li><li>Measure improvement over time.</li></ul>
   </div>
 </section>
 
