--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
   <title>FinternetOps • MBCC Agent Ops Playbook</title>
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
+      <a class="brand" href="index.html"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="/#overview">Overview</a>
-        <a href="/#runbooks">Runbooks</a>
-        <a href="/training/index.html">Training</a>
-        <a href="/blog/index.html">Blog</a>
+        <a href="index.html#overview">Overview</a>
+        <a href="index.html#runbooks">Runbooks</a>
+        <a href="training/index.html">Training</a>
+        <a href="blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
@@ -33,9 +33,9 @@
       useful operating principles for your audience.
     </p>
     <div class="actions">
-      <a class="btn primary" href="#runbooks">See Runbooks</a>
-      <a class="btn" href="/training/index.html">Start Training</a>
-      <a class="btn" href="/blog/index.html">Read Blog</a>
+      <a class="btn primary" href="#runbooks" data-scroll>See Runbooks</a>
+      <a class="btn" href="training/index.html">Start Training</a>
+      <a class="btn" href="blog/index.html">Read Blog</a>
     </div>
     <div class="pills">
       <span class="pill">Zero Trust defaults</span>
@@ -62,15 +62,15 @@
   <p>Public runbooks that stay useful without exposing proprietary IP.</p>
   <div class="grid">
     <div class="card tile">
-      <h4><a href="/runbooks/onboarding.html">Onboarding Runbook</a></h4>
+      <h4><a href="runbooks/onboarding.html">Onboarding Runbook</a></h4>
       <p>Start using Agent Ops in ~30 minutes.</p>
     </div>
     <div class="card tile">
-      <h4><a href="/runbooks/quality.html">Quality & Eval Runbook</a></h4>
+      <h4><a href="runbooks/quality.html">Quality & Eval Runbook</a></h4>
       <p>Test cases, regressions, monitoring.</p>
     </div>
     <div class="card tile">
-      <h4><a href="/runbooks/security.html">Security Runbook</a></h4>
+      <h4><a href="runbooks/security.html">Security Runbook</a></h4>
       <p>Zero trust, secrets hygiene, RBAC, incident response.</p>
     </div>
   </div>
@@ -80,7 +80,7 @@
   <h2>Training</h2>
   <p>Learning modules designed to create content depth (good for Auto Ads + SEO).</p>
   <div class="card callout">
-    <h3><a href="/training/index.html">Open Training</a></h3>
+    <h3><a href="training/index.html">Open Training</a></h3>
     <p class="small">Fundamentals → Guardrails → Quality loop.</p>
   </div>
 </section>
@@ -89,7 +89,7 @@
   <h2>Blog</h2>
   <p>Short build notes you can expand over time.</p>
   <div class="card callout">
-    <h3><a href="/blog/index.html">Open Blog</a></h3>
+    <h3><a href="blog/index.html">Open Blog</a></h3>
     <p class="small">Weekly posts = more pages = more inventory.</p>
   </div>
 </section>
@@ -102,6 +102,6 @@
     </footer>
   </main>
 
-  <script src="/assets/app.js"></script>
+  <script src="assets/app.js"></script>
 </body>
 </html>
