--- a/training/module-2.html
+++ b/training/module-2.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
   <title>FinternetOps • Module 2 — Guardrails</title>
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="../assets/styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="nav">
     <div class="nav-inner">
-      <a class="brand" href="/"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
+      <a class="brand" href="../index.html"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
       <nav class="links" aria-label="Primary">
-        <a href="/#overview">Overview</a>
-        <a href="/#runbooks">Runbooks</a>
-        <a href="/training/index.html">Training</a>
-        <a href="/blog/index.html">Blog</a>
+        <a href="../index.html#overview">Overview</a>
+        <a href="../index.html#runbooks">Runbooks</a>
+        <a href="../training/index.html">Training</a>
+        <a href="../blog/index.html">Blog</a>
       </nav>
     </div>
   </header>
@@ -46,6 +46,6 @@
     </footer>
   </main>
 
-  <script src="/assets/app.js"></script>
+  <script src="../assets/app.js"></script>
 </body>
 </html>
